<resources>
<string name="app_name">Rapport Météo</string>
<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>
<string name="nav_header_title">Android Studio</string>
<string name="nav_header_subtitle">android.studio@android.com</string>
<string name="nav_header_desc">Navigation header</string>
<string name="action_settings">Settings</string>

<string name="menu_home">Home</string>
<string name="menu_gallery">Gallery</string>
<string name="menu_slideshow">Slideshow</string>
<string name="powerby">Power By Raspberry pi 3</string>

<string name="temperature">Capteur de Température</string>
<string name="humidity">Capteur d\'Humidité</string>
<string name="luminosity">Capteur de Luminosité</string>
    <string name="pollution">Capteur de Pollution CO2</string>
    <string name="tvoc">Capteur de Pollution Tvoc</string>

<string name="action_temperature">Temperature</string>
<string name="action_humidite">Humidité</string>
<string name="action_luminosite">Luminosité</string>
    <string name="action_pollution">Pollution CO2</string>
    <string name="action_tvoc">Pollution Tvoc</string>


    <string name="buttonHome">Accueil</string>
    <string name="buttonVersTmp">Vers Capteur de température</string>
    <string name="buttonVersHum">Capteur d\'humidité</string>
    <string name="buttonVersLum">Capteur de luminosité</string>
    <string name="buttonVersPol">Capteur de pollution</string>
    <string name="buttonVersTvoc">Capteur Tvoc</string>
    <string name="buttonRefresh">Recharger</string>

    <string name="explicationTvoc">*TVOC = Volatile Organic Compounds</string>


</resources>